Fixed a max-height issue with descriptions getting cut off of non-featured items with long titles on small screens.

--- a/www/css/index.less
+++ b/www/css/index.less
@@ -318,11 +318,11 @@ ul {
   }
 
   .nonfeatured{
-    max-height: 3em;
+//    max-height: 3em;
     float: left;
     .logo{
       img{
-        max-height: 3em;
+//        max-height: 3em;
       }
       visibility: hidden;
       position: absolute;
@@ -335,6 +335,7 @@ ul {
       .description{
   //      visibility: hidden;
         max-height: 1.2em;
+        word-break:break-all;
       }
     }
   }
